<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/add_address_theme">

    <androidx.appcompat.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="add_new_address"
            android:textColor="@color/grey_txt"
            android:textSize="@dimen/text_size_12sp"
            android:textStyle="normal" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/saperator"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_below="@id/toolbar"
        android:background="@color/grey_border" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/saperator"
        android:layout_marginBottom="@dimen/margin_20">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/margin_38"
                android:background="@color/grey_bg_light"
                android:paddingStart="@dimen/margin_20"
                android:paddingTop="@dimen/margin_16"
                android:paddingEnd="@dimen/margin_20"
                android:text="@string/heading_service_area"
                android:textColor="@color/grey_txt_mid_light"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="normal" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/top_divider"
                    layout="@layout/vertical_divider"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/margin_1"
                    android:layout_alignParentTop="true" />

                <RelativeLayout
                    android:id="@+id/rl_selected_locality"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:layout_below="@id/top_divider"
                    android:background="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingStart="@dimen/margin_20"
                    android:paddingEnd="@dimen/margin_20">

                    <TextView
                        android:id="@+id/tv_selected_locality"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingStart="0.0dip"
                        android:paddingLeft="0.0dip"
                        android:paddingEnd="@dimen/margin_16"
                        android:paddingRight="@dimen/margin_16"
                        android:text="@string/select_location"
                        android:textColor="@color/grey_txt_darkest_dark"
                        android:textSize="@dimen/text_size_16sp" />

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/tv_selected_locality"
                        android:layout_alignRight="@id/tv_selected_locality"
                        android:layout_marginStart="@dimen/margin_20"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:gravity="end|center"
                        android:text="@string/uc_icon_map_greater_than"
                        android:textColor="@color/grey_txt_darkest_dark"
                        android:textSize="@dimen/text_size_18sp" />
                </RelativeLayout>

                <include
                    layout="@layout/vertical_divider"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/margin_1"
                    android:layout_below="@id/rl_selected_locality" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/margin_38"
                android:background="@color/grey_bg_light"
                android:paddingStart="@dimen/margin_20"
                android:paddingTop="@dimen/margin_16"
                android:paddingEnd="@dimen/margin_20"
                android:text="@string/heading_service_address"
                android:textColor="@color/grey_txt_mid_light"
                android:textSize="@dimen/text_size_12sp" />

            <include layout="@layout/vertical_divider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_16"
                android:paddingEnd="@dimen/margin_16"
                android:paddingBottom="@dimen/margin_32">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip"
                    app:hintTextAppearance="@style/add_address_til_hint">

                    <EditText
                        android:id="@+id/location_other"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip"
                    app:hintTextAppearance="@style/add_address_til_hint">

                    <EditText
                        android:id="@+id/landmark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address_landmark"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip"
                    app:hintTextAppearance="@style/add_address_til_hint">

                    <EditText
                        android:id="@+id/location_nickName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nick_name"
                        android:imeOptions="actionGo"
                        android:theme="@style/add_address_edittext" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/button_saveNewAddress"
        style="@style/font_regular"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/text_grey_light"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/margin_14"
        android:paddingBottom="@dimen/margin_15"
        android:text="@string/save"
        android:textColor="@color/white" />
</RelativeLayout>
