<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">


    <TextView
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:drawableLeft="@drawable/ic_arrow_back"
        android:drawableTint="@color/black"
        android:layout_margin="@dimen/margin_5"
        android:drawablePadding="@dimen/margin_10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/otp_verify_appbar"/>

    <LinearLayout
        android:id="@+id/parent_linearLayout"
        android:gravity="center"
        android:layout_below="@id/otp_verify_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_below="@id/otp_verify_appbar"
        android:id="@+id/login_otp_title"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_verification_code"
        android:textColor="@color/uc_black_87" />

    <TextView
        android:id="@+id/verifing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_otp_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_12"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/we_have_sent_you_otp"
        android:textColor="@color/uc_black_54"
        android:textSize="@dimen/text_size_12sp" />

    <TextView
        android:id="@+id/login_otp_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_5"
        android:fontFamily="sans-serif"
        android:textColor="@color/uc_black_87"
        android:textSize="@dimen/text_size_14sp" />

    <include
        android:id="@+id/otp"
        layout="@layout/login_otp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_otp_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_25" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="sans-serif"
        android:textColor="@color/green_confirm"
        android:textSize="@dimen/text_size_14sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/fragment_otp_time_elapsed_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_otp_time_elapsed"
            android:textColor="@color/grey_txt"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@drawable/rounded_white_black21_border"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/margin_10"
            android:text="@string/resend_code"
            android:textColor="@color/primary_new"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/otp_by_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@drawable/border_rounded_black"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/margin_10"
            android:text="@string/get_otp_on_call"
            android:textColor="@color/primary_new"
            android:textSize="@dimen/text_size_14sp"
            android:visibility="gone" />
    </LinearLayout>

    <EditText
        android:id="@+id/otp_editText"
        android:layout_width="1.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_otp_time_elapsed_layout"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#00000000" />
    </LinearLayout>

    <include layout="@layout/login_button_layout"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/parent_linearLayout"
        android:layout_height="wrap_content"/>
</RelativeLayout>
