<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_active_slots">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_customer_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/custom_toolbar_wedget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarker"
            android:elevation="@dimen/margin_4"
            android:fitsSystemWindows="true"
            app:title="F.A.Qs"
            app:titleTextColor="@color/white"
            android:theme="@style/AppTheme1">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_customer_support"
        android:gravity="start|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="@dimen/margin_15"
            android:text="F.A.Q."
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp" />


        <TextView
            android:id="@+id/bookSerice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black"
            android:padding="@dimen/margin_15"
            android:text="@string/booking_services"
            android:textColor="@color/black87"
            android:textSize="@dimen/text_size_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1" />

        <TextView
            android:id="@+id/payingService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black"
            android:padding="@dimen/margin_15"
            android:text="@string/paying_for_services"
            android:textColor="@color/black87"
            android:textSize="@dimen/text_size_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1" />

        <TextView
            android:id="@+id/urban_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black"
            android:padding="@dimen/margin_15"
            android:text="@string/a_guide_to_urbanclap"
            android:textColor="@color/black87"
            android:textSize="@dimen/text_size_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1" />
    </LinearLayout>
</RelativeLayout>